--- a/app/services/emails/layouts/newuser.hbs
+++ b/app/services/emails/layouts/newuser.hbs
@@ -10,7 +10,7 @@
   collapse; } p { margin: 0; } .ie-container table, .mso-container table {
   table-layout: fixed; } * { line-height: inherit; }
   a[x-apple-data-detectors='true'] { color: inherit !important; text-decoration:
-  none !important; } table, td { color: #000000; } a { color: #0000ee;
+  none !important; } table, td { color: #000000; } a {
   text-decoration: underline; } #u_content_text_6 a { color: #00ee40; }
 </style>
 
